Using 'upstream' as upstream branch'
Change-Id: I26260250684db4d60a741433c4aab962ab4fc1c3

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 upstream-tree=tag
-upstream-branch=upstream/%(version)s
+upstream-branch=upstream
 debian-tag=debian/%(version)s
 debian-branch=debian
 cleaner=fakeroot debian/rules clean
