Upstream release of 0.10.0
Using master as upstream branch
Change-Id: I30930b8fadb2304214377fdfa398eec84ae2683b

--- a/debian/etc/druid/common.runtime.properties
+++ b/debian/etc/druid/common.runtime.properties
@@ -27,7 +27,7 @@ druid.extensions.directory=/usr/share/druid/extensions
 
 # List extensions to load.  Directories matching these names must exist
 # in druid.extensions.directory.
-druid.extensions.loadList=["druid-histogram", "druid-datasketches", "druid-namespace-lookup"]
+druid.extensions.loadList=["druid-histogram", "druid-datasketches"]
 
 # If you have a different version of Hadoop, place your Hadoop client jar files
 # in your hadoop-dependencies directory and uncomment the line below to point
