--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 upstream-tree=tag
-upstream-branch=upstream
+upstream-branch=master
 debian-tag=debian/%(version)s
 debian-branch=debian
 cleaner=fakeroot debian/rules clean
