--- a/debian/control
+++ b/debian/control
@@ -16,30 +16,30 @@ Description: Druid Common
 
 Package: druid-broker
 Architecture: all
-Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common
+Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common (>= 0.10.0)
 Description: Druid Broker Node
  This package installs init scripts for the Druid Broker node.
 
 Package: druid-coordinator
 Architecture: all
-Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common
+Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common (>= 0.10.0)
 Description: Druid Coordinator Node
  This package installs init scripts for the Druid Coordinator node.
 
 Package: druid-historical
 Architecture: all
-Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common
+Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common (>= 0.10.0)
 Description: Druid Historical Node
  This package installs init scripts for the Druid Historical node.
 
 Package: druid-middlemanager
 Architecture: all
-Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common
+Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common (>= 0.10.0)
 Description: Druid MiddleManager Node
  This package installs init scripts for the Druid MiddleManager node.
 
 Package: druid-overlord
 Architecture: all
-Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common
+Depends: openjdk-8-jre | java8-runtime, adduser, ${misc:Depends}, druid-common (>= 0.10.0)
 Description: Druid Overlord Node
  This package installs init scripts for the Druid Overlord node.
