--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@
+	dh $@ --with systemd
 
 override_dh_install:
 	dh_install
@@ -15,4 +15,4 @@ override_dh_install:
 
 override_dh_installinit:
 	# Don't start services after installation
-	dh_installinit --no-start
+	# dh_installinit --no-start
