--- a/debian/control
+++ b/debian/control
@@ -9,10 +9,10 @@ Homepage: http://druid.io
 
 Package: druid-common
 Architecture: all
-Depends: openjdk-8-jre-headless | java8-runtime-headless, ${misc:Depends}
-Description: Druid Common
+Depends: openjdk-8-jre-headless | java8-runtime-headless, ${misc:Depends}, adduser
+Description: Druid common libraries
  This package includes common Druid .jars including extensions and
- Hadoop Depdencies shipped with the Druid release.  It also includes the
+ Hadoop dependencies shipped with the Druid release.  It also includes the
  mysql-metadata-storage extension.
 
 Package: druid-broker
