Switch to /srv/druid
Change-Id: Ie1a64150edb08c80c37c06165fc5c675b439f225

--- a/debian/etc/druid/common.runtime.properties
+++ b/debian/etc/druid/common.runtime.properties
@@ -55,7 +55,7 @@ druid.zk.paths.base=/druid
 # For Derby server on your Druid Coordinator (only viable in a cluster with
 # single Coordinator, no fail-over):
 druid.metadata.storage.type=derby
-druid.metadata.storage.connector.connectURI=jdbc:derby://localhost:1527/var/lib/druid/metadata.db;create=true
+druid.metadata.storage.connector.connectURI=jdbc:derby://localhost:1527/srv/druid/metadata.db;create=true
 druid.metadata.storage.connector.host=localhost
 druid.metadata.storage.connector.port=1527
 
@@ -79,7 +79,7 @@ druid.metadata.storage.connector.port=1527
 
 # For local disk (only viable in a cluster if this is a network mount):
 druid.storage.type=local
-druid.storage.storageDirectory=/var/lib/druid/deep-storage
+druid.storage.storageDirectory=/srv/druid/deep-storage
 
 # For HDFS (make sure to include the HDFS extension and that your Hadoop config files in the cp):
 #druid.storage.type=hdfs
@@ -98,7 +98,7 @@ druid.storage.storageDirectory=/var/lib/druid/deep-storage
 
 # For local disk (only viable in a cluster if this is a network mount):
 # druid.indexer.logs.type=file
-# druid.indexer.logs.directory=/var/lib/druid/indexing-logs
+# druid.indexer.logs.directory=/srv/druid/indexing-logs
 
 # For HDFS (make sure to include the HDFS extension and that your Hadoop config files in the cp):
 #druid.indexer.logs.type=hdfs
